# Monitoring_Platform-v1

./: .gitattributes  .gitignore  IMPLEMENTATION_CHECKLIST.md  README.md  TODO.md  UI_UX_ENHANCEMENT_SUMMARY.md  package-lock.json
Monitoring_App/milking-monitor/apps/inference-service/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Monitoring_App/milking-monitor/apps/inference-service/docs/: ML-SPIKE.md
Monitoring_App/milking-monitor/apps/inference-service/src/: main.py
Monitoring_App/milking-monitor/apps/inference-service/src/config/: rois.json  thresholds.json
Monitoring_App/milking-monitor/apps/inference-service/src/detection/: enhanced_yolo.py  hybrid_detector.py  hybrid_model_manager.py  object_feature_extractor.py  pose_feature_extractor.py  yolo_detector.py
Monitoring_App/milking-monitor/apps/inference-service/src/events/: event_builder.py  publisher.py
Monitoring_App/milking-monitor/apps/inference-service/src/ingestion/: roi_splitter.py  rtsp_reader.py
Monitoring_App/milking-monitor/apps/inference-service/src/runtime/: session_runner.py
Monitoring_App/milking-monitor/apps/inference-service/src/state_machine/: cow_process_boundary.py  task_state_machine.py
Monitoring_App/milking-monitor/apps/inference-service/tests/: conftest.py
Monitoring_App/milking-monitor/apps/inference-service/tests/api/: test_health.py
Monitoring_App/milking-monitor/apps/inference-service/tests/integration/: test_event_contract.py
Monitoring_App/milking-monitor/apps/inference-service/tests/unit/: test_roi_splitter.py  (+1 more)
(+204 files in other folders)
